# ift630Devoir3

./: .gitignore  CMakeLists.txt  README.md  Rapport.docx  ~$apport.docx  ~WRL2116.tmp
Client/: Client.cpp  Client.h  main.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Shared/: Messages.cpp  Messages.h  Sockets.hpp
